# PyQuotient

./: .gitignore  CMakeLists.txt  README.md  build.sh  project.in  pyproject.toml
.github/workflows/: ci.yml
PyQuotient/: __init__.py  bindings.h  qt_connection_util.py
PyQuotient/binding_definitions/: avatar.xml
PyQuotient/event-schemas/schema/: m.room.member.xml  stripped_state.xml
PyQuotient/event-schemas/schema/core-event-schema/: unsigned_prop.xml
PyQuotient/typesystems/: typesystem_avatar.xml  typesystem_connection.xml  typesystem_connectiondata.xml  typesystem_csapi.xml  typesystem_eventitem.xml  typesystem_events.xml  typesystem_index.xml  typesystem_networkaccessmanager.xml  typesystem_qt.xml  typesystem_room.xml  typesystem_settings.xml  typesystem_ssosession.xml  typesystem_user.xml
PyQuotient/typesystems/application-service/definitions/: location.xml  protocol.xml  user.xml
PyQuotient/typesystems/csapi/: account-data.xml  admin.xml  administrative_contact.xml  appservice_room_directory.xml  banning.xml  capabilities.xml  content-repo.xml  create_room.xml  cross_signing.xml  device_management.xml  directory.xml  event_context.xml  filter.xml  inviting.xml  joining.xml  keys.xml  kicking.xml  knocking.xml  leaving.xml  list_joined_rooms.xml  list_public_rooms.xml  login.xml  logout.xml  message_pagination.xml  notifications.xml  openid.xml  peeking_events.xml  presence.xml  profile.xml  pusher.xml  pushrules.xml  read_markers.xml  receipts.xml  redaction.xml  registration.xml  report_content.xml  room_send.xml  room_state.xml  room_upgrades.xml  rooms.xml  (+12 more)
PyQuotient/typesystems/csapi/definitions/: auth_data.xml  client_device.xml  cross_signing_key.xml  device_keys.xml  event_filter.xml  openid_token.xml  public_rooms_response.xml  push_condition.xml  push_rule.xml  push_ruleset.xml  request_email_validation.xml  request_msisdn_validation.xml  request_token_response.xml  room_event_filter.xml  sync_filter.xml  third_party_signed.xml  user_identifier.xml
PyQuotient/typesystems/csapi/definitions/wellknown/: full.xml  homeserver.xml  identity_server.xml
PyQuotient/typesystems/events/: typesystem_event.xml  typesystem_roomevent.xml  typesystem_stateevent.xml
PyQuotient/typesystems/identity/definitions/: request_email_validation.xml  request_msisdn_validation.xml
PyQuotient/typesystems/jobs/: typesystem_basejob.xml  typesystem_requestdata.xml
demo/: accountregistry.py  chatroomwidget.py  dialog.py  logindialog.py  main.py  mainwindow.py  pyquaternionroom.py  resources.py  resources.qrc  roomlistdock.py
demo/models/: abstractroomordering.py  messageeventmodel.py  orderbytag.py  roomlistmodel.py
demo/qml/: ImageContent.qml  Timeline.qml  TimelineItem.qml  TimelineItemToolButton.qml
docs/: typesystems.md
examples/: main.py
gtad/: gtad.yaml  typesystem.xml.mustache  typesystem_data.xml.mustache
pyside_typesystem/: CMakeLists.txt  avatar.xml  bindings.h
tests/: test_connection.py  test_connectiondata.py  test_csapi.py  test_events.py  test_networkaccessmanager.py  test_room.py  test_settings.py
tests/jobs/: test_basejob.py  test_requestdata.py
tools/: file_utils.py  fix_generated_sources.py  patch_gtag_config.py  update_api_bindings.py
